--- a/assets/style.css
+++ b/assets/style.css
@@ -5,18 +5,24 @@
     box-sizing: border-box;
 }
 
+/* LOGO DO SITE E NOME*/
+
 .logo{
     width: 80px;
     height: 80px;
     background-color: #F4C9C9;
     border-radius: 50%;
     margin: 20px 30px;
+    position: absolute;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.486)
 }
 
 #topo{
     position: absolute;
     left: 07%;
-    bottom: 89%;
+    bottom: 91%;
+    color: rgba(255, 255, 255, 0.795);
+    text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.63);
 }
 
 span{
@@ -24,35 +30,60 @@ span{
    
 }
 
+/* LOGO DO SITE E NOME - FIM */
+
+/* SLOGAN SITE */
+
 p{
     font-size:32px;
     font-weight: 500;
     color: rgba(255, 255, 255, 0.795);
+    text-shadow: 0px 5px 20px rgba(0, 0, 0, 0.521);
     text-align: center;
     width: 701px;
     height: 87px;
-    position: fixed;
+    position: absolute;
     left: 30%;
     top: 45%;
 }
 
+/* SLOGAN - FIM */
 
+/* VIDEO DE FUNDO */
+
+video{
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.9; 
+    
+}
+
+/* VIDEO DE FUNDO - FIM */
+
+section{
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    height: 100%;
+    display: inline-flex;                       
+    gap: 20px;                 
+    justify-content: center; 
+}
+#titulo{
+    position: absolute;
+    top: 55%;
+    left: 22%;
+}
 
 
 img{
     width:437px;
     height: 387px;
-}
-
-.botao{
-    width:201px;
-    height: 176px;
-    background-color: #F4C9C9;
-    border-radius: 50px;
-    box-shadow: 0px 7px 4px 0px  solid black;
-    margin-top: 20px;
-    text-align: center;
-    font-weight: 500;
-    font-size: 25px;
-
+    position: relative;
+    left: 30%;
+    top: 50%;
 }
