--- a/css/style.css
+++ b/css/style.css
@@ -57,14 +57,10 @@ li{
 }
 
 li:hover{
-    font-weight: 500;
-    
-    color: black;
-    border-radius: 30px;
-    border: 1px solid #f4c9c9a1;
+    font-weight: 800;
+    margin-right: 10px;
     padding: 10px;
-    box-shadow: 0px 10px 30px #f4c9c9a1;
-
+ 
 }
 /* LOGO DO SITE, NOME E MENU - FIM */
 
